--- a/Automation.Infraestructure/Automation.Infraestructure.csproj
+++ b/Automation.Infraestructure/Automation.Infraestructure.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="8.0.1" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.1" />
   </ItemGroup>
 
   <ItemGroup>
